# simple_rust_raytracer

./: Cargo.toml
examples/aloevera/src/: aloevera.rs
examples/earth/src/: earth.rs
examples/teapot/src/: teapot.rs
examples/two_balls/src/: two_balls.rs
src/: camera.rs  color.rs  lib.rs  light.rs  main.rs  materials.rs  objects.rs  scene.rs  utils.rs
src/math/: geometry.rs  vector.rs
src/objects/: hittables.rs  mesh.rs  object3d.rs  plane.rs  ray.rs  sphere.rs  triangle.rs
src/utils/: camera.rs  color.rs  light.rs
tests/: intersection_tests.rs  object_tests.rs  vector_tests.rs
