[package]
name = "simple_raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"
palette = "0.6.1"
image = "0.24.5"

[dev-dependencies]


[[example]]
name = "two_balls"
path = "examples/two_balls/src/two_balls.rs"

[[example]]
name = "earth"
path = "examples/earth/src/earth.rs"